# iotc-mcp-server

./: .aiignore  .gitignore  AGENTS.md  AGENTS_BOOTSTRAP.md  README.md  mcp.example.json  pyproject.toml
scripts/: local-build.sh  package.sh
src/iotc_mcp_server/: __init__.py  __main__.py  errors.py  resources.py  serialization.py  server.py  settings.py
src/iotc_mcp_server/tools/: __init__.py  auth.py  commands.py  devices.py  entities.py  telemetry.py  templates.py  users.py
